[FIX] Code block line numbers breaking with soft wrap [WIP] Toggleable line numbers and soft wrap for code blocks
BETA-293 [OPEN -> IN PROGRESS]
BETA-294 [OPEN -> DONE]

--- a/BaCa2/assets/scss/_code_block.scss
+++ b/BaCa2/assets/scss/_code_block.scss
@@ -4,6 +4,7 @@
 pre.code-block {
     &.wrap-lines {
         overflow: hidden;
+        white-space: pre-wrap;
 
         code {
             white-space: pre-wrap;
